--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>Alex Template 2</title>
+  <title>Stydu Gulp Boilerplate</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
 	<link rel="stylesheet" type="text/css" href="css/libs.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.min.css" />
