--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
   <head>
   <title>Stydu Gulp Boilerplate</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
-	<link rel="stylesheet" type="text/css" href="css/libs.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.min.css" />
   </head>
   <body>
@@ -799,7 +798,6 @@
     </div>
 
 	<!-- Scripts -->
-	<script src="js/libs.min.js"></script>
-    <script src="js/app.min.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
